Feat: Creating filter section to mobile screens

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,12 @@
-$mobile-header-height: 55px;
-$mobile-footer-height: 50px;
-$header-height: 60px;
+$header-height: 55px;
 $footer-height: 50px;
 $default-margin: 15px;
 
 // colors:
 $primary-color: #DC0A2D;
+
+/*
+@media #{map-get($display-breakpoints, 'xl-only')} {
+    $header-height: 150px;
+}
+*/
